# opengl_cherno

./: CMakeLists.txt  README.md  package.xml
doc/: projection.md
res/shaders/: basic.shader  uniform.shader  uniform_before_texture.shader  uniform_texture.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  abstracting.cpp  application.cpp  index_buffer.cpp  shader_test.cpp  uniform.cpp  vertex_array.cpp
