<?xml version="1.0"?>
<package>
  <name>opengl_cherno</name>
  <version>0.0.0</version>
  <description>-</description>

  <maintainer email="sli@informatik.uni-hamburg.de">Shuang Li</maintainer>
  <author email="sli@informatik.uni-hamburg.de">Shuang Li</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>

  <export>
  </export>

</package>
